# nrf_lessons

./: README.md
ncs-fund/lesson2/fund_less2_exer1/src/: main.c
ncs-fund/lesson2/fund_less2_exer2/src/: main.c
ncs-fund/lesson3/l3_e1/: CMakeLists.txt
ncs-fund/lesson3/l3_e2/: CMakeLists.txt  decawave_dwm1001_dev.overlay
ncs-fund/lesson4/fund_less4_exer1/src/: main.c
ncs-fund/lesson4/fund_less4_exer2/src/: main.c
ncs-fund/lesson5/fund_less5_exer1/src/: main.c
ncs-fund/lesson6/fund_less6_exer1/: decawave_dwm1001_dev.overlay  prj.conf
ncs-fund/lesson6/fund_less6_exer1/src/: main.c
ncs-fund/lesson7/fund_less7_exer1/src/: main.c
ncs-fund/lesson7/fund_less7_exer3/src/: main.c
ncs-fund/lesson8/fund_less8_exer1/src/: main.c
ncs-fund/lesson8/fund_less8_exer2/src/: main.c
